--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="parent">
   <h2>Parent component</h2>
+  <p>Beverage list from Parent Component</p>
   <ul>
     <li *ngFor="let beverage of listOfBeverages">{{beverage}}</li>
   </ul>
